infra/k8s/overlays/staging/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: social-media-frontend
spec:
  replicas: 2
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      abortScaleDownDelaySeconds: 45
